# ASIMOV

./: .gitignore
arm_urdf/: CMakeLists.txt  test_forward_kinematics.py
arm_urdf/urdf/: arm_urdf.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/fk_test/share/fk_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/arm_control/: package.xml  setup.py
src/arm_control/arm_control/: ik_keyboard_control.py
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: arm_urdf.ros2_control.xacro  arm_urdf.srdf  arm_urdf.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
src/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_urdf/: extract_link_lengths.py  patch_urdf.py
src/arm_urdf/config/: config.rviz
src/arm_urdf/meshes/: bicep.STL  left_claw.STL
src/controller/: setup.py
src/controller/config/: joystick.yaml
src/controller/controller/: arm_driver.py  motor_driver.py
src/controller/launch/: motor.launch.py
src/fk_test/: setup.cfg  setup.py
src/phidget_arm_control/: package.xml  setup.cfg  setup.py
src/phidget_arm_control/config/: arm_view.rviz
src/phidget_arm_control/launch/: phidget_control.launch.py
src/phidget_arm_control/phidget_arm_control/: ik_keyboard_control.py  phidget_arm_driver.py  trajectory_listener.py
(+43 files in other folders)
