<?xml version="1.0"?>
<package format="3">
  <name>phidget_arm_control</name>
  <version>0.1.0</version>
  <description>ROS2 node for controlling a Phidget robotic arm using MoveIt2 trajectories</description>
  <maintainer email="your_email@example.com">ibrahim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
