<?xml version="1.0"?>
<package format="3">
  <name>fk_test</name>
  <version>0.0.0</version>
  <description>Forward kinematics joint state publisher</description>
  <maintainer email="your@email.com">ibrahim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
